	- fixed: ECI C impl. did not properly release all file handles
		 in eci_cleanup(); for example playing thousands of
		 files with ecaplay would cause the system to run
		 out of file descriptors (too many open files error)
	- fixed: bug in handling LADSPA plugins with colon chars in 
		 their port descriptions (such as the SC1-4 
		 compressors)
12032005 (v2.4.0)  -** stable release **-
	- edi-entries: edi-40 progress
	- added: support for having commas in arguments by escaping 
	 	 them with a backslash (example: "ai-add foo\,bar.wav")
	- added: pretty-printing of ecasound output; wrap output so
		 so that all lines fit into 74 columns; does not affect
		 wellformed output mode nor stderr output (-D)
	- added: new section about handling commas in filenames to 
		 Ecasound User's Guide
	- added: eiam - new 'int-log-history' command to query 
	 	 recent log messages sent by libecasound; this is a very
		 useful tool for debugging ECI scripts and apps
	- added: eiam - new 'int-set-log-history-length' command to set
		 log history length; default to 5 items
	- added: resample-lq (low-quality) audio object to force using
		 the internal resampler even though support for
		 libsamplerate is enabled at build time
	- added: support for sum-mixmode; enabled with -z:mixmode,sum;
		 the old average mixing is still the default; see
	 	 ecasound(1)
	- added: ecasoundrc - 'mix-mode' setting; see ecasoundrc(5)
	- changed: more helpful messages to explain why a chainsetup 
		   cannot be connected to the engine
	- changed: EIAM - when returning a list of strings, all commas
		   in list elements are now escaped with backslashes; 
		   this is done to avoid ambiguity in parsing
	- changed: new default debug level of 271
	- changed: new optimized message queue implementation used in
	           communication between the engine and the interface 
		   subsystems; solves a few remaining corner cases 
		   where ecasound could block in real-time critical 
		   code-paths